--- a/其他/正则表达式.md
+++ b/其他/正则表达式.md
@@ -19,11 +19,11 @@
 |------------|------------|
 |\r, \n|代表回车和换行符|
 |\t|制表符|
-|\\|代表 "\" 本身|
+|\\\\|代表 "\" 本身|
 
 
 
-还有其他一些在后边章节中有特殊用处的标点符号，在前面加 "\" 后，就代表该符号本身。比如：^, $ 都有特殊意义，如果要想匹配字符串中 "^" 和 "$" 字符，则表达式就需要写成 "\^" 和 "\$"。
+还有其他一些在后边章节中有特殊用处的标点符号，在前面加 "\\" 后，就代表该符号本身。比如：^, $ 都有特殊意义，如果要想匹配字符串中 "^" 和 "$" 字符，则表达式就需要写成 "\^" 和 "\$"。
 
 |表达式|可匹配|
 |------------|------------|
