--- a/其他/正则表达式.md
+++ b/其他/正则表达式.md
@@ -19,7 +19,7 @@
 |------------|------------|
 |\r, \n|代表回车和换行符|
 |\t|制表符|
-|\\\\|代表 "\\" 本身|
+| \\\\ | 代表 "\\" 本身|
 
 
 
@@ -124,11 +124,11 @@
     
 举例如下：
 
-举例1：表达式 "('|")(.*?)(\1)" 在匹配 " 'Hello', "World" " 时，匹配结果是：成功；匹配到的内容是：" 'Hello' "。再次匹配下一个时，可以匹配到 " "World" "。
+举例1：表达式 "('\|")(.*?)(\1)" 在匹配 " 'Hello', "World" " 时，匹配结果是：成功；匹配到的内容是：" 'Hello' "。再次匹配下一个时，可以匹配到 " "World" "。
 
 举例2：表达式 "(\w)\1{4,}" 在匹配 "aa bbbb abcdefg ccccc 111121111 999999999" 时，匹配结果是：成功；匹配到的内容是 "ccccc"。再次匹配下一个时，将得到 999999999。这个表达式要求 "\w" 范围的字符至少重复5次，点击测试 注意与 "\w{5,}" 之间的区别。
 
-举例3：表达式 "<(\w+)\s*(\w+(=('|").*?\4)?\s*)*>.*?</\1>" 在匹配 "<td id='td1' style="bgcolor:white"></td>" 时，匹配结果是成功。如果 "<td>" 与 "</td>" 不配对，则会匹配失败；如果改成其他配对，也可以匹配成功。
+举例3：表达式 "<(\w+)\s*(\w+(=('\|").*?\4)?\s*)*>.*?</\1>" 在匹配 "<td id='td1' style="bgcolor:white"></td>" 时，匹配结果是成功。如果 "<td>" 与 "</td>" 不配对，则会匹配失败；如果改成其他配对，也可以匹配成功。
 
 ## 9 预搜索，不匹配；反向预搜索，不匹配
 
@@ -171,4 +171,4 @@
 |?|修饰匹配次数为 0 次或 1 次。要匹配 "?" 字符本身，请使用 "\?"|
 |+|修饰匹配次数为至少 1 次。要匹配 "+" 字符本身，请使用 "\+"|
 |*|修饰匹配次数为 0 次或任意次。要匹配 "*" 字符本身，请使用 "\*"|
-|\||左右两边表达式之间 "或" 关系。匹配 "|" 本身，请使用 "\|"|
+| \| |左右两边表达式之间 "或" 关系。匹配 "\|" 本身，请使用 "\|"|
