--- a/其他/我的2021.md
+++ b/其他/我的2021.md
@@ -57,5 +57,5 @@ it行业靠自己，靠自己，靠自己。说三遍。别人只是带你打开
 
 ## 2022展望
 
-坚持现状，坚持学习。为公司搭建基础设施层，提升自己的运维能力，和架构能力。争取一年把自己的开源项目star超过500，彻底从全栈工程师转成晕开工程师，和系统架构师。扩大圈子，感觉现在不懂金融，大佬们的聊天都有点跟不上了。所以至少成为金融小白。
+坚持现状，坚持学习。为公司搭建基础设施层，提升自己的运维能力，和架构能力。争取一年把自己的开源项目star超过500，彻底从全栈工程师转成运开工程师，和系统架构师。扩大圈子，感觉现在不懂金融，大佬们的聊天都有点跟不上了。所以至少成为金融小白。
 
