--- a/其他/我的2021.md
+++ b/其他/我的2021.md
@@ -9,7 +9,7 @@
 区别对待。刚出校门不懂得韬光养晦，得罪了人都不知道。不过第一份工作虽然很短暂，但是让我找到了希望，因为那时候我发现了互联网的机
 遇。其实我毕业的论文是一个很好的项目，可是缺乏更多的专业知识支撑，所以只是一篇很有创意的论文。其实那时候我是很看好农业电商的。
 虽然现在看来那时候的想法是对的，但是一个3流大专生的眼界，和资源，人脉是不足以支持我的想法落地的。其实圈子真的很重要。其实读大学
-我觉得更多的是阶级的跃迁，工作了10年真的深有体会，你的周围人决定了你的眼界，决定了你的资源，所以独一所好大学还是很有必要的。因为
+我觉得更多的是阶级的跃迁，工作了10年真的深有体会，你的周围人决定了你的眼界，决定了你的资源，所以读一所好大学还是很有必要的。因为
 他会让你离成功更近。其实也感谢陪伴了我好多年的朋友，虽然我们没有最后走到一起，但是还是感谢你陪伴了我最落魄的那些年。也感谢我现在
 的妻子，对我的关心体贴。同样感谢我的爸妈，亲戚对我的照顾和包容。
 
