--- a/其他/我的2021.md
+++ b/其他/我的2021.md
@@ -15,7 +15,7 @@
 
 ## 入坑前端
 
-其实我可以说自己真的是前端的老司机了，我应该是国内前端职位的先驱了。那时候ie6所向披靡，各种兼容问题五花八门，解决方案各式各样。其实我
+其实我可以说自己真的是前端的老司机了，我应该是国内前端职位的先行者了。那时候ie6所向披靡，各种兼容问题五花八门，解决方案各式各样。其实我
 也不是一个合格的前端，因为我不懂编程，刚入前端一行其实我只会写css，做ui图，那时候编程语言的基础几乎为零。在南京找工作的时候，遇到了
 各种磕磕碰碰，花了2个多月进了一个小公司，结果这个小公司没活过半年，但是这半年让我成长了很多。这份工作经历为我后续的前端道路至关重要。
 
