--- a/其他/我的2021.md
+++ b/其他/我的2021.md
@@ -23,7 +23,7 @@
 ## 上海的痛
 
 随着工作的年限增加，对技术的追求越来越深，当时lnmp火遍了整个中国。后来我放弃了工作，去了上海兄弟连培训机构，在那里学习php。有时候理想和
-现实是有很大差距的，虽然学到了一些知识但是和我想想的还是差距很大。但是人生的第一次收入的提升也算弥补了失落。也许上天是公平的，开了一扇门
+现实是有很大差距的，虽然学到了一些知识但是和我想象的还是差距很大。但是人生的第一次收入的提升也算弥补了失落。也许上天是公平的，开了一扇门
 就会关上一扇窗，人情世故方面的问题让我越陷越深，可能心态问题真的很严重，我太在意别人对我的看法，太过聪明也不是一件好事，沉不住气的性格也
 是让我举步维艰。虽然期间发生了很多不愉快的事，但上海之行也是一笔宝贵的人生经历
 
