--- a/其他/我的2021.md
+++ b/其他/我的2021.md
@@ -31,7 +31,7 @@
 
 你相信吗，我被诊断过忧郁症，其实现在放开心扉了，也就坦然了。其实我很正常，从没有什么忧郁症，一切只是保护自己的假象。但是其实说没问题，其实
 心里也有问题的，我真的很聪明很聪明，有时候别人的一句话，我能得到很多信息，但是还是年轻时候欠的债太多了，浪费了自己的所有天赋，聪明人很容易陷入自己的
-怪圈，而我就陷入了这个怪圈，如果我从小就努力提升自己的认知也许会是另一方观景，但是世上没有后悔药，有些局我不想参加，因为我知道我没有那个能力左右。
+怪圈，而我就陷入了这个怪圈，如果我从小就努力提升自己的认知也许会是另一个现状，但是世上没有后悔药，有些局我不想参加，因为我知道我没有那个能力左右。
 对不起，那些对我怀有期望的人，让你们伤心了，但是真的，我害怕了，因为我不想做那个杨修。我一直想逃，现在看开了，说起来你们不信，那时候我真的很怕。
 也许因为看得太深了，我自己都迷失了。索性现在坦然了，感谢我的奶奶，你教会了我很多东西。虽然你已经不在了，但我知道您是睿智的，也感谢您对我的宠爱。
 现在一切都过去了，其实家里最睿智的是我爷爷，他不善于言辞但是我知道他为我安排了太多但是我的年少无知辜负了他，也许这是我一辈子的遗憾，我不后悔我的逃避，但是对我的家人我还是很感到亏欠的。
