--- a/其他/我的2021.md
+++ b/其他/我的2021.md
@@ -4,9 +4,9 @@
 
 第一感觉时间过得真快，我的姑姑这周70大寿了，我的爸爸也60多了，而我也结婚2年多了。第一感觉还没适应过来，仿佛自己浑浑噩噩的就迈入
 了壮年，从11年进入社会，在社会打拼也10多年了，有些许后悔也有些许庆幸。感谢上天给了我过人的天赋，虽然读书的时候没有好好读，导致
-自己都不是一个本科生。按照断头皇后的例子，年轻时候的每一次任性都将在不久的未来付出昂贵的代价。离开校园时我真的什么都不会，
+自己都不是一个本科生。按照断头皇后的例子，年轻时候的每一次任性都将在不久的未来付出昂贵的代价。离开校园时我真的什么都不会，
 把青春奉献给了dota，那句dota毁一生虽然有点夸张但是也算是真实写照。记得刚毕业实习的工作是一个月300。干了一周离职了，因为受不了
-区别对待。刚出校门不懂得韬光养晦，得罪了人都不知道。不过第一份工作虽然很短暂，但是让我找到了希望，因为那时候我发现了互联网的机
+区别对待。刚出校门不懂得韬光养晦，得罪了人都不知道。不过第一份工作虽然很短暂，但是让我找到了希望，因为那时候我发现了互联网的机
 遇。其实我毕业的论文是一个很好的项目，可是缺乏更多的专业知识支撑，所以只是一篇很有创意的论文。其实那时候我是很看好农业电商的。
 虽然现在看来那时候的想法是对的，但是一个3流大专生的眼界，和资源，人脉是不足以支持我的想法落地的。其实圈子真的很重要。其实读大学
 我觉得更多的是阶级的跃迁，工作了10年真的深有体会，你的周围人决定了你的眼界，决定了你的资源，所以读一所好大学还是很有必要的。因为
@@ -47,11 +47,11 @@
 
 做了一些项目，学了很多技术，认识了很多人，虽然对公司的产出不多，但是技术能力，架构都有了很明显的提高。尤其近2年提升显著。主要和我的圈子有关。
 从10月份开始，时间进行了细化安排，基本上安排的满满的，更加注重大学的基础知识，开始恶补大学的课程，同时开始关注金融。把老的github仓库都删了
-1 因为有不少项目感觉过时了，2 代码质量不够高  同时创建了新的仓库，周六会去图书馆看书，周日会安排一天去写开源项目。同时开始写文章，特地搭建了一个仓库，
+1 因为有不少项目感觉过时了，2 代码质量不够高  同时创建了新的仓库，周六会去图书馆看书，周日会安排一天去写开源项目。同时开始写文章，特地搭建了一个仓库，
 期望是1周1-2篇文章。为了写文章我还特地开发了一个编辑器。技术提升是一方面，管理方面提升也很重要，随着10月份的军事化安排，每天会花很多时间
 看各种社区资源，随着圈子的提升，眼界的提升，发现大家都是卷的不得了，12点在讨论架构，越是优秀的人越努力。其实我不知道自己算不算一个好领导，
 但我觉得我是一个愿意帮助下属成长的领导，也许我不太严格，但是我会帮你提升视野。学习其实还是要靠自己的，别人教你的只是皮毛，只要自己专研进去了才会发现一片天地。
-it行业靠自己，靠自己，靠自己。说三遍。别人只是带你打开视野，我觉得有一句话说的很对，初级程序员80%时间在完成工作，中级程序员40%时间在完成共工作，高级程序员20%时间在完成工作。
+it行业靠自己，靠自己，靠自己。说三遍。别人只是带你打开视野，我觉得有一句话说的很对，初级程序员80%时间在完成工作，中级程序员40%时间在完成工作，高级程序员20%时间在完成工作。
 不要认为工作的时间越长越自豪，你应该深刻的反思，为什么别人比你优秀，每一个成功的人背后都会有一段艰辛的付出。付出了不一定会成功，但是你不付出安于现状，计算机行业你注定被淘汰。
 平时的积累也许10篇文章只有1篇文章对你有帮助，但是一个月，3个月，1年，一个好的算法，一个好的软件，一个好的思路，一个好的圈子，这些才是你35以后可以依仗的。
 
